--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-200.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-877.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 捷克-1.02MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇬🇧 英国-1.97MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇫🇷 法国-877.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-5.37MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇬🇧 英国-1.01MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-303.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-200.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-200.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-200.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-200.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-200.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-200.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-200.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
       - 捷克-1.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.97MB/s(Youtube:不良林)
+      - 🇫🇷 法国-877.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-891.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-303.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
