--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-372.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 捷克-1.03MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇬🇧 英国-1.31MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-388.7KB/s(Youtube:不良林), server: in-tw-1.iivvppnn.info, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-612.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.36MB/s(Youtube:不良林), server: jp1.jjzgy.live, port: 32333, type: trojan, password: e12b8580-f641-380b-9d10-8036c60780f1, sni: jp1.jjzgy.live, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-651.3KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-459.2KB/s(Youtube:不良林), server: 5.183.176.96, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-650.9KB/s(Youtube:不良林), server: 5.183.176.94, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-555.5KB/s(Youtube:不良林), server: 5.183.176.96, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-602.1KB/s(Youtube:不良林), server: 5.183.176.94, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-11.97MB/s(Youtube:不良林), server: 20.24.91.135, port: 12339, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 捷克-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-651.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 捷克-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-651.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 捷克-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-651.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 捷克-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-651.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 捷克-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-651.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 捷克-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-651.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.66MB/s(Youtube:不良林)
+      - 捷克-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-388.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-651.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-887.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-650.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-602.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-11.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
